Added start script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a repository template to host static html/css webpages on https://vercel.app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
